# protobuf-forensic

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-three-crate-reader-analyzer-cli-layering.md  0002-build-our-own-schemaless-wire-decoder.md  0003-zero-dependency-bounds-checked-reader.md  0004-forbid-unsafe-panic-free-by-lint.md  0005-crate-naming-collision-rename.md  0006-per-crate-msrv-split.md  0007-message-first-length-delimited-inference.md  0008-timestamp-flagging-as-cited-candidates.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: analyze.rs  decode.rs
protobuf-core/: Cargo.toml  README.md
protobuf-core/src/: error.rs  lib.rs  reader.rs
protobuf-core/tests/: oracle.rs  wire.rs
protobuf-forensic/: CHANGELOG.md  Cargo.toml  README.md
protobuf-forensic-core/: CHANGELOG.md  Cargo.toml  README.md
protobuf-forensic-core/src/: lib.rs  reader.rs
protobuf-forensic-core/tests/: oracle.rs  wire.rs
protobuf-forensic/src/: lib.rs  timestamps.rs
protobuf-forensic/tests/: analyze.rs
protobuf4n6/: CHANGELOG.md  Cargo.toml  README.md
protobuf4n6/src/: lib.rs  main.rs  render.rs
protobuf4n6/tests/: cli.rs
supply-chain/: config.toml
